[package]
name = "solidflare"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
worker = { git = "https://github.com/cloudflare/workers-rs", branch = "main", features = ["d1"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
